# JARVIK_DevLab_Local

./: .gitignore  MANIFEST.in  README.md  create_venv.sh  devlab_venv.sh  install.sh  pyproject.toml  requirements.txt  upgrade.sh
.github/workflows/: test.yml
DevLab/: README.md  __init__.py  cli.py  dev_engine.py  devlab_config.json  github_connector.py  knowledge_db.py  pipeline.py
DevLab/ui/: devlab_ui.html
src/: app.py
src/devlab/: README.md  __init__.py  app.py  cli.py  dev_engine.py  devlab_config.json  generator.py  knowledge_db.py  manager.py  pipeline.py  utils.py  validator.py
src/devlab/ui/: devlab_ui.html
tests/: conftest.py  test_app.py  test_cli.py  test_generation_validation.py  test_github_connector.py  test_pipeline.py  test_storage.py  test_utils.py
