[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvik-devlab"
version = "0.1.0"
description = "Development layer for Jarvik"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Jarvik Developers", email = "devs@example.com"}
]
dependencies = ["requests"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["devlab"]

[tool.setuptools.package-data]
"devlab" = ["devlab_config.json", "ui/*.html"]

[project.scripts]
devlab-cli = "devlab.cli:main"
devlab-server = "src.app:main"
